fixes spacing in nav

--- a/src/components/SideNavClient.module.css
+++ b/src/components/SideNavClient.module.css
@@ -5,7 +5,7 @@
 }
 
 .section {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .topButton {
